--- a/src/css/index-style.css
+++ b/src/css/index-style.css
@@ -3,8 +3,51 @@
 @import url('normalize.css');
 
 body{
-    background-image: url("../../assets/img/main/fondo_inicio.gif");
+    background-image: url("../../assets/img/index/fondo_inicio.gif");
     background-size: 0.3rem;
+}
+
+.retro-prompt {
+    display: flex;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    justify-content: center;
+    align-items: center;
+}
+
+.prompt-container {
+    position: relative;
+    padding: 20px;
+    background: #000;
+    border: 2px solid #fff;
+}
+
+.close {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
+}
+
+.memory-card-list {
+    list-style: none;
+    padding: 0;
+}
+
+.memory-card-option {
+    padding: 10px;
+    border: 1px solid #fff;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.memory-card-option:focus {
+    outline: none;
+    background: #333;
 }
 
 svg{
@@ -22,6 +65,17 @@ svg{
     font-size: 2.1rem;
     text-align: center;
     text-decoration: none;
-    text-shadow: 0.38rem 0.25rem 0.3rem rgba(204,204,204,0.53);
+    text-shadow: 0.38rem 0.25rem 0.3rem rgba(204, 204, 204, 0.53);
     margin-top: 35vh;
+}
+
+.texto-oculto {
+    opacity: 0;
+    transform: translateY(-750%);
+    transition: opacity 8s, transform 8s;
+}
+
+.mostrar-texto {
+    opacity: 1;
+    transform: translateY(0);
 }
