--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content=" de DATOR GAMES"> <!-- TODO RELLENAR DESCRIPCIÓN DE PÁGINA -->
+    <meta name="description" content=" de VisualDynamics"> <!-- TODO RELLENAR DESCRIPCIÓN DE PÁGINA -->
     <meta name="author" content="Daniel Alonso Lázaro">
     <meta name="author" content="Víctor Hellín Sáez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../src/css/"> <!-- TODO RELLENAR RUTA CORRECTA DE RECURSO -->
-    <title>DATOR GAMES</title>
+    <title>VisualDynamics</title>
     <script defer src="../../src/js/"></script> <!-- TODO RELLENAR RUTA CORRECTA DE RECURSO -->
 </head>
 <body>
