--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -1,29 +1,82 @@
+@import url('https://fonts.cdnfonts.com/css/press-start-2p');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
+@import url('normalize.css');
+
 body {
     background-image: url("../../assets/img/index/fondo_inicio.gif");
     background-size: 0.3rem;
+    user-select: none;
 }
 
 #reproductor {
-    display: flex;
+    display: grid;
+    grid-template-columns: 25% 75%;
+    grid-template-rows: 15vh 15vh;
 }
 
 .botones {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: white;
     margin-left: 0.6rem;
-    width: 5%;
+    grid-row: 1/2;
+    grid-column: 1/2;
 }
 
-#adelante {
-    margin-left: 0.8rem;
+#botones {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding-bottom: 0.1rem;
+    margin-top: 5%;
 }
 
-svg {
-    width: 90vw;
-    height: 30vh;
-    display: block;
-    position: relative;
-    overflow: hidden;
-    margin: 0 auto;
+#parar {
+    color: #3d07e7 ;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(67, 1, 231, 0.5);
+}
+
+#continuar {
+    font-size: 1.5rem;
+    color: #e30b0b;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(227, 11, 11, 0.5);
+    padding-left: 0.15rem;
+}
+
+#atras-parar {
+    color: rgba(67, 1, 231, 0.5) ;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(67, 1, 231, 0.5);
+}
+
+#adelante-parar {
+    margin-left: 1rem;
+    color: rgba(67, 1, 231, 0.5) ;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(67, 1, 231, 0.5);
+}
+
+#atras-continuar {
+    color: rgba(227, 11, 11, 0.5);
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(227, 11, 11, 0.5);
+}
+
+#adelante-continuar {
+    margin-left: 1rem;
+    color: rgba(227, 11, 11, 0.5);
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(227, 11, 11, 0.5);
+}
+
+#titulo-cancion {
+    width: 90%;
+    justify-self: center;
+    font-family: "Press Start 2P", serif;
+    color: #3d07e7 ;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(67, 1, 231, 0.5);
+}
+
+#titulo {
+    grid-row: 1/3;
+    grid-column: 2/3;
 }
 
 h4, h2, small, a {
@@ -135,10 +188,13 @@ a {
     outline: 0;
 }
 
-.carrusel-arrow svg {
-    width: 12px;
-    height: 100%;
-    color: black;
+.carrusel-arrow {
+    width: 2rem;
+    height: 2rem;
+    font-size: 2rem;
+    background-color: transparent;
+    color: #e30b0b;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(227, 11, 11, 0.5);
 }
 
 .carrusel-prev {
