--- a/templates/style.css
+++ b/templates/style.css
@@ -1,3 +1,3 @@
 @import url('https://fonts.cdnfonts.com/css/press-start-2p');
 @import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
-@import url('normalize.css');
+@import url('normalize.css'); /*TODO COMPROBAR RUTA!*/
