--- a/src/css/main-style.css
+++ b/src/css/main-style.css
@@ -78,104 +78,64 @@ body {
     grid-row: 1/3;
     grid-column: 2/3;
 }
-
-a {
-   text-decoration: none;
-}
-
-.carousel {
-    width: 100%;
-}
-
-.carousel h2 {
-    font-size: 45px;
-    line-height: 38px;
-    padding-bottom: 50px;
-    opacity: .9;
-    text-transform: uppercase;
-    font-weight: 600;
-    text-align: center;
-    color: white;
-}
-
+/* Bien */
 .carrusel-list {
-    position: relative;
     display: flex;
     align-items: center;
-    width: fit-content;
-    height: 304px;
+    width: 100%;
     padding: 10px 0;
     margin: 0 auto;
     max-width: 90vw;
     overflow: hidden;
 }
-
+/* Bien */
 .carrusel-track {
     position: relative;
-    top: 0;
     left: 0;
     display: flex;
-    justify-content: center;
-    transition: .5s ease-in-out;
+    transition: 1s ease-in-out;
 }
-
+/* Mirarlo bien */
 .carrusel {
     position: relative;
     width: 210px;
-    padding: 0 18px;
+    padding: 0 1rem;
     float: left;
     box-sizing: border-box;
     display: flex;
-    height: 100%;
 }
 
 .carrusel h4 {
+    font-family: "Press Start 2P", serif;
     position: absolute;
     z-index: 1;
-    font-size: 22px;
+    font-size: 10px;
     line-height: 23px;
     color: white;
     padding: 15px;
 }
-
+/* Mirar Font Size */
 .carrusel h4 small {
-    font-size: 15px;
+    font-family: "Press Start 2P", serif;
+    font-size: 10px;
     display: block;
 }
 
 .carrusel a img {
     object-fit: cover;
-    height: 300px;
-    width: 200px;
-    box-shadow: 0 2px 5px grey;
+    height: 200px;
+    width: 300px;
+    box-shadow: 0 2px 5px white;
     transition: .3s ease-in-out;
 }
-
-@media(min-width: 768px) {
-    .carrusel {
-        width: 275px;
-    }
-
-    .carrusel a img {
-        width: 250px;
-    }
-}
-
+/* Bien */
 .carrusel-arrow {
-    background-color: white;
     position: absolute;
     z-index: 4;
-    width: 48px;
-    height: 48px;
-    text-align: center;
     border: 0;
     cursor: pointer;
 }
-
-.carrusel-arrow:focus {
-    outline: 0;
-}
-
+/* Bien */
 .carrusel-arrow {
     width: 2rem;
     height: 2rem;
@@ -184,11 +144,11 @@ a {
     color: #3d07e7 ;
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(67, 1, 231, 0.5);
 }
-
+/* Bien */
 .carrusel-prev {
     left: 0;
 }
-
+/* Bien */
 .carrusel-next {
-    right: 0;
+    right: 0.5rem;
 }
