--- a/src/css/header_footer.css
+++ b/src/css/header_footer.css
@@ -6,6 +6,9 @@ body {
     background-image: url("../../assets/img/index/fondo_inicio.gif");
     background-size: 0.3rem;
     user-select: none;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #reproductor {
@@ -69,7 +72,7 @@ body {
 #titulo-cancion {
     width: 90%;
     justify-self: center;
-    font-family: "Press Start 2P", serif;
+    font-family: "Press Start 2P", monospace;
     color: #e30b0b;
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(227, 11, 11, 0.5);
 }
@@ -78,3 +81,27 @@ body {
     grid-row: 1/3;
     grid-column: 2/3;
 }
+
+footer {
+    width: 100%;
+    height: 4rem;
+    background-color: #000;
+    color: white;
+    text-align: center;
+    font-family: 'Press Start 2P', monospace;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
+
+body:nth-last-child(1) {
+    margin-bottom: 4.5rem;
+}
+
+p {
+    margin: 0;
+}
+
