--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,14 +25,14 @@ a {
     background: transparent;
 }
 
-html{
+html {
     font-size: 16px;
     font-family: "Press Start 2P", serif;
 }
 
 body,
 .retro-prompt,
-.retro-message{
+.retro-message {
     background-image: url("../../assets/img/index/fondo_inicio.gif");
     background-size: 0.3rem;
 }
@@ -45,7 +45,7 @@ svg {
 }
 
 .retro-prompt,
-.retro-message{
+.retro-message {
     display: flex;
     position: fixed;
     left: 0;
@@ -57,7 +57,7 @@ svg {
 }
 
 .prompt-container,
-.prompt-message{
+.prompt-message {
     position: relative;
     background: var(--background-color);
     border: 0.3rem solid var(--border-color);
@@ -100,7 +100,14 @@ svg {
     animation: fadeIn 5s ease-in-out 1s forwards;
 }
 
-@keyframes fadeIn {from{opacity: 0;}to{opacity: 1;}}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
 
 .titulo-animado {
     background: linear-gradient(
@@ -117,12 +124,23 @@ svg {
     animation: fillText 1.40s linear infinite, shadowGlow 1.40s linear infinite;
 }
 
-@keyframes fillText{0%{background-position: 100% 0;}
-    100%{background-position: -100% 0;}}
+@keyframes fillText {
+    0% {
+        background-position: 100% 0;
+    }
+    100% {
+        background-position: -100% 0;
+    }
+}
 
-@keyframes shadowGlow {0%, 100%{text-shadow: 0.38rem 0.25rem 0.1rem
-var(--shadow-light);}50% {text-shadow: 0.38rem 0.25rem 0.3rem
-rgba(255, 255, 0, 0.8);}}
+@keyframes shadowGlow {
+    0%, 100% {
+        text-shadow: 0.38rem 0.25rem 0.1rem var(--shadow-light);
+    }
+    50% {
+        text-shadow: 0.38rem 0.25rem 0.3rem rgba(255, 255, 0, 0.8);
+    }
+}
 
 .texto-oculto {
     opacity: 0;
@@ -135,7 +153,7 @@ rgba(255, 255, 0, 0.8);}}
     transform: translateY(0);
 }
 
-#no-memory{
+#no-memory {
     display: none;
 }
 
@@ -157,12 +175,12 @@ rgba(255, 255, 0, 0.8);}}
 }
 
 #pause-emoji, #pause-text {
-    color: #3d07e7 ;
+    color: #3d07e7;
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(67, 1, 231, 0.5);
 
 }
 
-#play-emoji, #play-text{
+#play-emoji, #play-text {
     color: #e30b0b;
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(227, 11, 11, 0.5);
 }
@@ -189,7 +207,7 @@ rgba(255, 255, 0, 0.8);}}
 @media screen and (max-width: 35rem) {
     body,
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         background-size: 0.3rem;
     }
 
@@ -199,18 +217,19 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         height: 50%;
         font-size: 0.7rem;
     }
 
     .prompt-container,
-    .prompt-message{
+    .prompt-message {
         position: relative;
         padding: 1.5rem;
         border: 0.1rem solid var(--border-color);
         margin-top: 30rem;
-        & p{
+
+        & p {
             word-spacing: -0.2rem;
         }
     }
@@ -234,7 +253,7 @@ rgba(255, 255, 0, 0.8);}}
 
     .memory-card-option:focus,
     .memory-card-option:hover {
-        text-shadow: 0.1rem 0.1rem 0.05rem var(--shadow-dark);
+        text-shadow: 0.1rem 0.1rem 0.05rem var(--shadow-light);
     }
 
     .titulo {
@@ -259,7 +278,7 @@ rgba(255, 255, 0, 0.8);}}
         text-shadow: 0.15rem 0.15rem 0.1rem rgba(67, 1, 231, 0.5);
     }
 
-    #play-emoji, #play-text{
+    #play-emoji, #play-text {
         text-shadow: 0.15rem 0.15rem 0.1rem rgba(227, 11, 11, 0.5);
     }
 
@@ -278,7 +297,7 @@ rgba(255, 255, 0, 0.8);}}
 @media screen and (min-width: 35rem) and (max-width: 47.99rem) {
     body,
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         background-size: 0.5rem;
     }
 
@@ -288,17 +307,18 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         height: 50%;
         font-size: 1.2rem;
     }
 
     .prompt-container,
-    .prompt-message{
+    .prompt-message {
         padding: 1.5rem 1.96rem 1.98rem 1.8rem;
         border: 0.1rem solid var(--border-color);
         margin-top: 30rem;
-        & p{
+
+        & p {
             margin-left: 1.2rem;
         }
     }
@@ -350,7 +370,7 @@ rgba(255, 255, 0, 0.8);}}
 
     #play-emoji,
     #play-tex,
-    #pause-text{
+    #pause-text {
         font-size: 1rem;
     }
 }
@@ -359,7 +379,7 @@ rgba(255, 255, 0, 0.8);}}
 @media screen and (min-width: 48rem) and (max-width: 63.99rem) {
     body,
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         background-size: 0.5rem;
     }
 
@@ -369,17 +389,18 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         height: 70%;
         font-size: 1.2rem;
     }
 
     .prompt-container,
-    .prompt-message{
+    .prompt-message {
         padding: 1.5rem 1.96rem 1.98rem 1.8rem;
         border: 0.1rem solid var(--border-color);
         margin-top: 30rem;
-        & p{
+
+        & p {
             margin-left: 1.2rem;
         }
     }
@@ -440,7 +461,7 @@ rgba(255, 255, 0, 0.8);}}
 @media screen and (min-width: 64em) and (max-width: 79.99rem) {
     body,
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         background-size: 0.5rem;
     }
 
@@ -450,18 +471,19 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         height: 60%;
         font-size: 1rem;
     }
 
     .prompt-container,
-    .prompt-message{
+    .prompt-message {
         position: relative;
         padding: 2rem 2.4rem 2rem 2.4rem;
         border: 0.2rem solid var(--border-color);
         margin-top: 30rem;
-        & p{
+
+        & p {
             margin-left: 1.2rem;
         }
     }
@@ -479,10 +501,6 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .memory-card-option:focus,
-    .memory-card-option:hover {
-        text-shadow: 0.15rem 0.15rem 0.1rem var(--shadow-dark);
-    }
-
     .memory-card-option:hover {
         text-shadow: 0.15rem 0.15rem 0.1rem var(--shadow-dark);
     }
@@ -511,7 +529,7 @@ rgba(255, 255, 0, 0.8);}}
         text-shadow: 0.25rem 0.25rem 0.1rem rgba(67, 1, 231, 0.5);
     }
 
-    #play-emoji, #play-text{
+    #play-emoji, #play-text {
         text-shadow: 0.25rem 0.25rem 0.1rem rgba(227, 11, 11, 0.5);
     }
 }
@@ -520,7 +538,7 @@ rgba(255, 255, 0, 0.8);}}
 @media screen and (min-width: 80rem) and (max-width: 119.99rem) {
     body,
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         background-size: 0.5rem;
     }
 
@@ -530,18 +548,19 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         height: 60%;
         font-size: 1.2rem;
     }
 
     .prompt-container,
-    .prompt-message{
+    .prompt-message {
         position: relative;
         padding: 2.5rem 3rem 2.5rem 3rem;
         border: 0.3rem solid var(--border-color);
         margin-top: 30rem;
-        & p{
+
+        & p {
             margin-left: 1.2rem;
         }
     }
@@ -559,7 +578,7 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .memory-card-option:focus,
-    .memory-card-option:hover{
+    .memory-card-option:hover {
         text-shadow: 0.1rem 0.1rem 0.1rem var(--shadow-dark);
     }
 
@@ -587,7 +606,7 @@ rgba(255, 255, 0, 0.8);}}
         text-shadow: 0.25rem 0.25rem 0.1rem rgba(67, 1, 231, 0.5);
     }
 
-    #play-emoji, #play-text{
+    #play-emoji, #play-text {
         text-shadow: 0.25rem 0.25rem 0.1rem rgba(227, 11, 11, 0.5);
     }
 }
@@ -596,7 +615,7 @@ rgba(255, 255, 0, 0.8);}}
 @media (min-width: 120rem) {
     body,
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         background-size: 0.5rem;
     }
 
@@ -606,18 +625,19 @@ rgba(255, 255, 0, 0.8);}}
     }
 
     .retro-prompt,
-    .retro-message{
+    .retro-message {
         height: 100%;
         font-size: 2rem;
     }
 
     .prompt-container,
-    .prompt-message{
+    .prompt-message {
         padding: 4rem 6.9rem 6.9rem 4rem;
         border: 0.4rem solid var(--border-color);
         box-shadow: 0.3rem 0.3rem 0.1rem var(--shadow-light);
         margin-top: 30rem;
-        & p{
+
+        & p {
             margin-left: 2.5rem;
         }
     }
@@ -661,9 +681,10 @@ rgba(255, 255, 0, 0.8);}}
         text-shadow: 0.4rem 0.5rem 0.3rem rgba(67, 1, 231, 0.5);
     }
 
-    #play-emoji, #play-text{
+    #play-emoji, #play-text {
         text-shadow: 0.4rem 0.5rem 0.3rem rgba(227, 11, 11, 0.5);
     }
+
     #pause-emoji {
         margin-right: 0.75rem;
         font-size: 2rem;
