--- a/src/css/memory_cards.css
+++ b/src/css/memory_cards.css
@@ -1,3 +1,216 @@
 @import url('https://fonts.cdnfonts.com/css/press-start-2p');
 @import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono');
 @import url('normalize.css');
+
+html {
+    font-size:   16px;
+    font-family: "Press Start 2P", serif;
+}
+
+body {
+    background-image: url("../../assets/img/index/fondo_inicio.gif");
+    background-size:  0.3rem;
+}
+
+canvas {
+    object-fit:       contain;
+    background-image: url("../../assets/img/index/fondo_inicio.gif");
+    background-size:  0.3rem;
+    margin:           0 auto;
+}
+
+h1 {
+    color:      white;
+    font-size:  2.5rem;
+    text-align: center;
+}
+
+.container {
+    text-align:    center;
+    margin-bottom: 0.8rem;
+    margin-top:    1.2rem;
+}
+
+.botones-seleccion {
+    margin:        1rem auto;
+    padding:       0.5rem 1rem;
+    color:         #fff;
+    background:    #000;
+    border:        0.3rem solid #fff;
+    outline:       none;
+    box-shadow:    0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+    border-radius: 2.5px;
+}
+
+.botones-seleccion:focus,
+.botones-seleccion:hover {
+    outline:     none;
+    background:  #999;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 1);
+}
+
+.fondo-modal {
+    display:          none;
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal {
+    display:         flex;
+    flex-direction:  row;
+    justify-content: center;
+    align-items:     center;
+}
+
+.interior-modal p {
+    color:       #fff;
+    font-size:   1.5rem;
+    text-align:  center;
+    text-shadow: 0.15rem 0.15rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+#seleccion-colores {
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+    margin-bottom:   6rem;
+}
+
+.color {
+    width:  30px;
+    height: 30px;
+    cursor: pointer;
+}
+
+.color-option {
+    margin:  0.4rem;
+    padding: 0.3rem
+}
+
+.color {
+    border: 2px solid #fff;
+}
+
+.color-option.seleccionado {
+    transform: scale(1.5);
+    border:    2px solid #e30b0b;
+}
+
+#modal-fondos {
+    display:          none;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
+
+.imagenes {
+    display:         flex;
+    flex-wrap:       wrap;
+    justify-content: center;
+    align-items:     center;
+}
+
+.objetoSVG {
+    cursor:         pointer;
+    pointer-events: auto;
+}
+
+.objetoSVG object {
+    width:          112px;
+    height:         162px;
+    margin:         0.5rem;
+    pointer-events: none;
+}
+
+.objetoSVG {
+    position: relative;
+    display:  inline-block;
+}
+
+
+.tooltip-text {
+    visibility:       hidden;
+    width:            120px;
+    background-color: #000;
+    color:            #fff;
+    border:           2px solid #fff;
+    text-align:       center;
+    padding:          5px 0;
+    position:         absolute;
+    z-index:          1;
+    bottom:           100%;
+    left:             50%;
+    margin-left:      -60px;
+    margin-bottom:    1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+    text-shadow:      0.15rem 0.15rem 0.15rem rgba(204, 204, 204, 1);
+}
+
+.objetoSVG:hover .tooltip-text {
+    visibility: visible;
+}
+
+#menu-dificultad, #boton-fondo {
+    display:      inline-block;
+    margin-right: 1rem;
+}
+
+#facil, #medio, #dificil {
+    position:     relative;
+    margin-right: 2rem;
+}
+
+#facil .tooltip-text, #medio .tooltip-text, #dificil .tooltip-text {
+    width:       15rem;
+    margin-left: -7.5rem;
+}
+
+#reiniciar .tooltip-text {
+    width:       15rem;
+    margin-left: -7.5rem;
+}
+
+#reiniciar:hover .tooltip-text,
+#boton-fondo:hover .tooltip-text,
+#facil:hover .tooltip-text,
+#medio:hover .tooltip-text,
+#dificil:hover .tooltip-text {
+    visibility: visible;
+}
+
+#boton-fondo, #reiniciar {
+    position:    relative;
+    margin-left: 3rem;
+}
+
+.marcador button:nth-child(2) {
+    margin-left: 1rem;
+}
+
+.marcador {
+    margin-left: 2rem;
+}
+
+#boton-fondo .tooltip-text {
+    width:       15rem;
+    margin-left: -7.5rem;
+}
+
+#score, #clicks, #tiempo {
+}
+
+#cerrar-modal {
+    margin: 0.5rem auto;
+}
+
