Juego de atrapa al div TERMINADO

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,7 +24,7 @@ body {
     grid-column: 1/2;
 }
 
-#botones {
+#botonesMusica {
     display: flex;
     flex-direction: row;
     justify-content: center;
