--- a/src/css/header_footer.css
+++ b/src/css/header_footer.css
@@ -31,7 +31,7 @@ body {
     grid-column: 1/2;
 }
 
-#botones {
+#botonesMusica {
     display: flex;
     flex-direction: row;
     justify-content: center;
