--- a/src/css/pilla_el_div.css
+++ b/src/css/pilla_el_div.css
@@ -1,3 +1,8 @@
+html {
+    font-size:   16px;
+    font-family: "Press Start 2P", serif;
+}
+
 .reboteDivFacil {
     width: 150px;
     height: 150px;
@@ -64,6 +69,91 @@
     cursor: pointer;
 }
 
+.container {
+    text-align:    center;
+    margin-bottom: 0.8rem;
+    margin-top:    1.2rem;
+}
+
+h1 {
+    color:      white;
+    font-size:  2.5rem;
+    text-align: center;
+}
+
+.botones-seleccion {
+    margin:        1rem auto;
+    padding:       0.5rem 1rem;
+    color:         #fff;
+    background:    #000;
+    border:        0.3rem solid #fff;
+    outline:       none;
+    box-shadow:    0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+    border-radius: 2.5px;
+}
+
+.botones-seleccion:focus,
+.botones-seleccion:hover {
+    outline:     none;
+    background:  #999;
+    text-shadow: 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 1);
+}
+
+.tooltip-text {
+    visibility:       hidden;
+    width:            auto;
+    min-width: 7.5rem;
+    background-color: #000;
+    color:            #fff;
+    border:           2px solid #fff;
+    text-align:       center;
+    padding:          5px 10px;
+    position:         absolute;
+    z-index:          1;
+    bottom:           100%;
+    left:             50%;
+    transform:         translateX(-50%);
+    margin-bottom:    1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+    white-space: nowrap;
+    text-shadow:      0.15rem 0.15rem 0.15rem rgba(204, 204, 204, 1);
+}
+
+#facil .tooltip-text {
+    margin-left: 3rem;
+}
+
+#menu-dificultad {
+     display:      inline-block;
+     margin-right: 1rem;
+ }
+
+#facil, #medio, #dificil, #hardcore, #infinito {
+    position:     relative;
+    margin-right: 2rem;
+}
+
+#reiniciar:hover .tooltip-text,
+#facil:hover .tooltip-text,
+#medio:hover .tooltip-text,
+#dificil:hover .tooltip-text,
+#hardcore:hover .tooltip-text,
+#infinito:hover .tooltip-text {
+    visibility: visible;
+}
+
+#reiniciar {
+    position:    relative;
+    margin-left: 3rem;
+}
+
+.marcador {
+    margin-left: 2rem;
+}
+
+#score, #clicks, #tiempo {
+}
+
 .oculto {
     display: none;
 }
@@ -72,6 +162,8 @@
     margin: auto;
     height: 25rem;
     width: 800px;
+    border: 0.3rem solid white;
+    box-shadow: 0.3rem 0.3rem 0.1rem rgba(204,204,204,0.8);
 }
 
 .seleccion, #finDelJuego{
