--- a/src/css/memory_cards.css
+++ b/src/css/memory_cards.css
@@ -165,12 +165,12 @@ h1 {
     margin-right: 1rem;
 }
 
-#facil, #medio, #dificil {
+#ia, #dosJugadores, #dificil {
     position:     relative;
     margin-right: 2rem;
 }
 
-#facil .tooltip-text, #medio .tooltip-text, #dificil .tooltip-text {
+#ia .tooltip-text, #dosJugadores .tooltip-text, #dificil .tooltip-text {
     width:       15rem;
     margin-left: -7.5rem;
 }
@@ -182,8 +182,8 @@ h1 {
 
 #reiniciar:hover .tooltip-text,
 #boton-fondo:hover .tooltip-text,
-#facil:hover .tooltip-text,
-#medio:hover .tooltip-text,
+#ia:hover .tooltip-text,
+#dosJugadores:hover .tooltip-text,
 #dificil:hover .tooltip-text {
     visibility: visible;
 }
