--- a/src/css/memory_cards.css
+++ b/src/css/memory_cards.css
@@ -20,7 +20,7 @@ canvas {
 }
 
 h1 {
-    color:      white;
+    color:      #fff;
     font-size:  2.5rem;
     text-align: center;
 }
@@ -48,6 +48,19 @@ h1 {
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 1);
 }
 
+.modal-fondos {
+    display:          none;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
+
 .fondo-modal {
     display:          none;
     position:         fixed;
@@ -72,6 +85,62 @@ h1 {
     text-align:  center;
     text-shadow: 0.15rem 0.15rem 0.1rem rgba(204, 204, 204, 1);
 }
+
+.modal-inicio {
+    display:          block;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    width:            max-content;
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
+
+.fondo-modal-inicio {
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal-inicio {
+    color: #fff;
+}
+
+.interior-modal-inicio h2 {
+    font-size:     3rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+    text-shadow:   0.2rem 0.2rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+.interior-modal-inicio h3 {
+    font-size:     1.5rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+}
+
+.interior-modal-inicio ul {
+    margin:     1.5rem 4rem;
+    font-size:  1rem;
+    text-align: left;
+
+    & li {
+        line-height: 2.5rem;
+    }
+}
+
+.interior-modal-inicio button {
+    margin-top: 2.5rem;
+}
+
 
 .seleccion-colores {
     display:         flex;
@@ -98,19 +167,6 @@ h1 {
 .color-option.seleccionado {
     transform: scale(1.5);
     border:    2px solid #e30b0b;
-}
-
-.modal-fondos {
-    display:          none;
-    position:         fixed;
-    top:              50%;
-    left:             50%;
-    transform:        translate(-50%, -50%);
-    z-index:          11;
-    border:           0.3rem solid #fff;
-    background-color: #000;
-    padding:          1rem;
-    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
 }
 
 .imagenes {
@@ -186,7 +242,9 @@ h1 {
 .marcador:hover .tooltip-text,
 .reiniciar:hover .tooltip-text,
 .seleccion-fondo:hover .tooltip-text,
-.color:hover .tooltip-text {
+#cerrar-modal:hover .tooltip-text,
+.color:hover .tooltip-text,
+.cerrar-inicio:hover .tooltip-text {
     visibility: visible;
 }
 
@@ -194,7 +252,9 @@ h1 {
 .marcador,
 #boton-fondo,
 .reiniciar,
-#cerrar-modal {
+#cerrar-modal,
+.cerrar-inicio,
+.color-option {
     position: relative;
 }
 
