--- a/src/css/pilla_el_div.css
+++ b/src/css/pilla_el_div.css
@@ -203,32 +203,6 @@ h1 {
     outline: none;
 }
 
-ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style: none;
-    height: 100%;
-}
-
-li{
-    display: flex;
-    margin-top: auto;
-    margin-bottom: auto;
-    border: 0.3rem solid white;
-    cursor: pointer;
-    text-align: center;
-    color: white;
-    font-size: 16px;
-    font-family: "Press Start 2P", serif;
-    width: 10rem;
-    height: 4.5rem;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0.15rem 0.15rem 0.1rem rgba(204,204,204,0.8);
-    text-shadow: 0.13rem 0.13rem 0.1rem rgba(204,204,204,1);
-}
-
 .final{
     display: flex;
     margin-top: auto;
@@ -250,12 +224,76 @@ li{
     width: 80%;
 }
 
-li:focus,
-li:hover {
-    outline: none;
-    background: grey;
-    text-shadow: 0.15rem 0.15rem 0.1rem rgba(0, 0, 0, 1);
+.modal-inicio {
+    display:          block;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    width:            max-content;
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
 }
+
+.fondo-modal-inicio {
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal-inicio {
+    color: #fff;
+}
+
+.interior-modal-inicio p {
+    text-align: center;
+}
+
+.interior-modal-inicio h2 {
+    font-size:     3rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+    text-shadow:   0.2rem 0.2rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+.interior-modal-inicio h3 {
+    font-size:     1.5rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+}
+
+.interior-modal-inicio ul {
+    margin:     1.5rem 4rem;
+    font-size:  1rem;
+    text-align: left;
+
+    & li {
+        line-height: 2.5rem;
+    }
+}
+
+.interior-modal-inicio button {
+    margin: 2.5rem auto;
+    display: block;
+}
+
+.tooltip-right {
+    left:        100%;
+    top:         50%;
+    transform:   translateY(-50%);
+    margin-left: 1.5rem;
+}
+
+ .cerrar-inicio {
+     position: relative;
+ }
 
 .fondo-facil {
     background: url("../../assets/img/pilla_el_div/easy_bg.gif");
