--- a/src/css/memory_cards.css
+++ b/src/css/memory_cards.css
@@ -48,6 +48,8 @@ h1 {
     text-shadow: 0.2rem 0.2rem 0.1rem rgba(0, 0, 0, 1);
 }
 
+/** INICIO MODALES **/
+/** MODAL DE SELECCIÓN DE FONDOS **/
 .modal-fondos {
     display:          none;
     position:         fixed;
@@ -86,6 +88,7 @@ h1 {
     text-shadow: 0.15rem 0.15rem 0.1rem rgba(204, 204, 204, 1);
 }
 
+/** MODAL DE INICIO / BIENVENIDA **/
 .modal-inicio {
     display:          block;
     position:         fixed;
@@ -141,7 +144,63 @@ h1 {
     margin-top: 2.5rem;
 }
 
+/** MODAL DE ESTADÍSTICAS **/
+.modal-estadisticas {
+    display:          block;
+    position:         fixed;
+    top:              50%;
+    left:             50%;
+    transform:        translate(-50%, -50%);
+    width:            max-content;
+    z-index:          11;
+    border:           0.3rem solid #fff;
+    background-color: #000;
+    padding:          1rem;
+    box-shadow:       0.3rem 0.3rem 0.1rem rgba(204, 204, 204, 0.8);
+}
 
+.fondo-modal-estadisticas {
+    position:         fixed;
+    top:              0;
+    left:             0;
+    width:            100%;
+    height:           100%;
+    z-index:          10;
+    background-color: rgba(0, 0, 0, 0.95);
+}
+
+.interior-modal-estadisticas {
+    color: #fff;
+}
+
+.interior-modal-estadisticas h3 {
+    font-size:     3rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+    text-shadow:   0.2rem 0.2rem 0.1rem rgba(204, 204, 204, 1);
+}
+
+.interior-modal-estadisticas h4 {
+    font-size:     1.5rem;
+    text-align:    center;
+    margin-bottom: 1.5rem;
+}
+
+.interior-modal-estadisticas ul {
+    margin:     1.5rem 4rem;
+    font-size:  1rem;
+    text-align: left;
+
+    & li {
+        line-height: 2.5rem;
+    }
+}
+
+.interior-modal-estadisticas button {
+    margin-top: 2.5rem;
+}
+
+/** OPCIONES DE COLORES **/
 .seleccion-colores {
     display:         flex;
     justify-content: center;
@@ -169,6 +228,7 @@ h1 {
     border:    2px solid #e30b0b;
 }
 
+/** DIVS DE IMÁGENES DE FONDO **/
 .imagenes {
     display:         flex;
     flex-wrap:       wrap;
@@ -193,6 +253,7 @@ h1 {
     display:  inline-block;
 }
 
+/* TOOLTIP MAESTRO*/
 .tooltip-text {
     visibility:       hidden;
     width:            auto;
@@ -209,6 +270,7 @@ h1 {
     white-space:      nowrap;
 }
 
+/* POSICIONES TOOLTIP */
 .tooltip-top {
     bottom:        100%;
     left:          50%;
@@ -237,6 +299,7 @@ h1 {
     margin-left: 1rem;
 }
 
+/** HOVERS DE LOS TOOLTIPS **/
 .objetoSVG:hover .tooltip-text,
 .dificultad:hover .tooltip-text,
 .marcador:hover .tooltip-text,
@@ -244,17 +307,20 @@ h1 {
 .seleccion-fondo:hover .tooltip-text,
 #cerrar-modal:hover .tooltip-text,
 .color:hover .tooltip-text,
-.cerrar-inicio:hover .tooltip-text {
+.cerrar-inicio:hover .tooltip-text,
+.cerrar-estadisticas:hover .tooltip-text {
     visibility: visible;
 }
 
+/* POSITION DE LOS TOOLTIPS */
 .dificultad,
 .marcador,
-#boton-fondo,
+#boton-seleccion-fondo,
 .reiniciar,
 #cerrar-modal,
 .cerrar-inicio,
-.color-option {
+.color-option,
+.cerrar-estadisticas {
     position: relative;
 }
 
